--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "correios-brasil": "^2.2.2",
     "dayjs": "^1.10.7",
     "handlebars": "^4.7.7",
     "mongoose": "^6.2.1",
