--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "stripe": "^8.203.0",
     "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41"
   },
