--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/swagger": "^5.2.0",
+    "@nestjs/throttler": "^2.0.0",
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "brazilian-values": "^0.10.1",
@@ -43,7 +44,9 @@
     "correios-brasil": "^2.2.2",
     "dayjs": "^1.10.7",
     "handlebars": "^4.7.7",
+    "ioredis": "^4.28.5",
     "mongoose": "^6.2.1",
+    "nestjs-throttler-storage-redis": "^0.1.18",
     "nodemailer": "^6.7.2",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
