feat: add login with google

--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,15 @@ MAIL_EXPIRATION_HOURS=2
 
 # Stripe
 STRIPE_API_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# Throttle
+THROTTLE_TTL=60
+THROTTLE_LIMIT=10
+
+# Redis
+REDIS_URL=redis://localhost:6379
+
+# Google
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
