--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "cookie-parser": "^1.4.6",
     "correios-brasil": "^2.2.2",
     "dayjs": "^1.10.7",
+    "googleapis": "^95.0.0",
     "handlebars": "^4.7.7",
     "ioredis": "^4.28.5",
+    "joi": "^17.6.0",
     "mongoose": "^6.2.1",
     "nestjs-throttler-storage-redis": "^0.1.18",
     "nodemailer": "^6.7.2",
@@ -67,9 +69,11 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.0.2",
+    "@types/joi": "^17.2.3",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.4",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
